--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,11 @@
 {erl_opts, [debug_info]}.
 
 {dialyzer, [
-	{warnings, [no_opaque]}
+	{warnings, []}
 ]}.
+
+{pre_hooks,[
+        {"linux|bsd|darwin|solaris", compile, "priv/ibuild.escript"},
+        {"win32", compile, "escript.exe priv/ibuild.escript"}
+]}.
+
