Fix windows slash in rebar.config

--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,6 @@
 
 {pre_hooks,[
         {"linux|bsd|darwin|solaris", compile, "priv/ibuild.escript"},
-        {"win32", compile, "escript.exe priv/ibuild.escript"}
+        {"win32", compile, "escript.exe priv\\ibuild.escript"}
 ]}.
 
