Update a bit for hex.pm

--- a/rebar.config
+++ b/rebar.config
@@ -9,3 +9,9 @@
         {"win32", compile, "escript.exe priv/ibuild.escript"}
 ]}.
 
+{hex, [{doc, ex_doc}]}.
+
+{ex_doc, [
+          {source_url, <<"https://github.com/qdate/qdate_localtime">>},
+          {extras, [<<"README.md">>, <<"LICENSE.md">>]},
+          {main, <<"readme">>}]}.
